# HexapodLeg_modeling_team

./: README.md
2dof/: CONTROLLER_COMPARISON.md  FREQUENCY_SYNC.md  FREQUENCY_TUNING.md  JOINT_LIMITS.md  LIMITS_SUMMARY.txt  PD_CONTROLLER_ACTIVE.md  PD_CONTROLLER_GUIDE.md  PLATFORM_DIAGRAM.txt  PLOTJUGGLER_CHEATSHEET.txt  PLOTJUGGLER_FIX.md  PLOTJUGGLER_QUICKSTART.md  QUICK_REFERENCE.md  ROBOT_WORKING.md  STATIC_BASE_SETUP.md  STEP_CONTROLLER_GUIDE.md  STEP_QUICK_START.txt  demo_with_plotjuggler.sh  quick_start.sh  test_pd_controller.sh
2dof/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
2dof/install/hexapod_controller/share/hexapod_controller/: package.xml
2dof/log/: latest_build
2dof/src/hexapod_controller/: README.md  setup.py
2dof/src/hexapod_controller/plots/: hexapod.layout.xml
2dof/src/hexapod_gazebo/: README.md  package.xml
2dof/src/hexapod_gazebo/worlds/: hexapod.sdf
2dof/src/hexapod_gz/: PLOTJUGGLER_GUIDE.md  README.md  setup.py
2dof/src/hexapod_gz/config/: new_juggler.xml  plotjuggler_layout.xml  ros2_controllers.yaml  sinewave_juggler_layout.xml
2dof/src/hexapod_gz/hexapod_gz/: manual_joint_control.py  pd_torque_controller_node.py
2dof/src/hexapod_gz/launch/: spawn_robot.launch.py  spawn_robot_pd.launch.py
2dof/src/hexapod_gz/scripts/: plot_joints.sh  verify_robot.sh
2dof/src/hexapod_gz/urdf/: control.xacro  hexapod_modelling_team.xacro
2dof/src/hexapod_gz/worlds/: hexapod.sdf
2dof/src/hexapod_modelling_team/config/: joint_hexapod.yaml  setup.bash
2dof/src/hexapod_modelling_team/launch/: hexapod_robot.launch.py
2dof/src/hexapod_modelling_team/meshes/: Link_2.STL
2dof/src/hexapod_modelling_team/textures/: hexapod_modelling_team.xacro
2dof/src/hexapod_modelling_team/urdf/: 2DOF_Physical.csv
2dof/src/hexapod_modelling_team/worlds/: empty.world  robot.world
hexapod/install/: local_setup.sh  setup.zsh
hexapod/install/hexapod_gz/share/hexapod_gz/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
hexapod/install/hexapod_gz/share/hexapod_gz/worlds/: hexapod.sdf
hexapod/log/: latest_build
hexapod/src/cybergear/cybergear_driver/: CMakeLists.txt
hexapod/src/cybergear/cybergear_interfaces/: CMakeLists.txt
hexapod/src/hexapod_controller/: CMakeLists.txt  setup.py
hexapod/src/hexapod_controller/hexapod_controller/: position_velocity_demo.py
hexapod/src/hexapod_controller/scripts/: position_velocity_demo.py  start_plotjuggler.py
hexapod/src/hexapod_gazebo/: CMakeLists.txt
hexapod/src/hexapod_gazebo/config/: plotjuggler.xml
hexapod/src/hexapod_gazebo/launch/: sim_with_controller.launch.py
hexapod/src/hexapod_gz/: CMakeLists.txt  setup.cfg
hexapod/src/hexapod_gz/launch/: sim.launch.py
hexapod/src/hexapod_modelling_team/: CMakeLists.txt  model.config.in
hexapod/src/hexapod_modelling_team/launch/: gazebo.launch  gazebo_simulation.launch.py  simple_display.launch.py
hexapod/src/hexapod_modelling_team/meshes/: base_link.STL
hexapod/src/hexapod_modelling_team/urdf/: hexapod_modelling_team.xacro
hexapod/src/script/: hexapod_script.py
hexapod/src/volta_controller/: CMakeLists.txt  package.xml
(+176 files in other folders)
