<?xml version="1.0"?>
<package format="3">
  <name>hexapod_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo launch and tooling for hexapod_modelling_team with ros2_control and PlotJuggler.</description>
  <maintainer email="user@example.com">hexapod</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>plotjuggler</exec_depend>
  <exec_depend>plotjuggler_msgs</exec_depend>
  <exec_depend>hexapod_modelling_team</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
