<?xml version="1.0"?>
<package format="3">
  <name>hexapod_controller</name>
  <version>0.1.0</version>
  <description>Control node and PlotJuggler setup for hexapod (position/velocity commands and plotting).</description>
  <maintainer email="user@example.com">hexapod</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>plotjuggler</exec_depend>
  <exec_depend>plotjuggler_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>position_controllers</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
